--- a/package.json
+++ b/package.json
@@ -4,7 +4,9 @@
   "description": "",
   "main": "index.js",
   "scripts": {
-    "dev": "nodemon ./src/app.ts"
+    "dev": "nodemon ./src/app.ts",
+    "start": "node ./dist/app.ts",
+    "build": "tsc"
   },
   "keywords": [],
   "author": "Estiven Mahecha <mahechahe@gmail.com>",
